--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Yao WEI Photography</title>
 
+<script>
+    document.createElement("picture");
+  </script>
+  <script src="js/polyfill.min.js"></script>
+
+
   
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css.css">
@@ -80,7 +86,14 @@
 
 <div id="banner" class="col-12">
     
-    <img src="img/isabella-gray.jpg" id="banner_img">
+    <!--<img src="img/isabella-gray.jpg" id="banner_img">-->
+
+    <picture>
+    <source media="(min-device-width: 1200px)"
+    srcset="img/index-banner-flat.jpg" 
+    />
+    <img src="img/index-banner.jpg" id="banner_img">
+    </picture>
 
     
     <div id="banner-textbox">
