--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -160,6 +160,41 @@
 
 
 
+<div class="footer row">
+
+  <div class="col-12" id="copyright-box">
+    <p id="copyright">Copyright © Developed by Yao WEI</p>
+  </div>
+
+  <div class="col-12" id="social-icon-box">
+    <div id="span-box">
+      <!-- <span class="zocial-facebook"></span>
+      <span class="zocial-instagram"></span>
+      <span class="zocial-linkedin"></span>
+      <span class="zocial-weibo"></span> -->
+
+
+      <ul class="soc">
+        
+        <li><a target="_blank" class="soc-facebook" href="https://www.facebook.com/yaohermione"></a></li>
+        <li><a target="_blank" class="soc-pinterest" href="https://www.pinterest.com/yaohermione/"></a></li>
+        <li><a target="_blank" class="soc-linkedin" href="https://www.linkedin.com/in/yao-wei-939a044b?trk=nav_responsive_tab_profile_pic"></a></li>
+        <li><a target="_blank" class="soc-google" href="https://plus.google.com/115912904688638383478"></a></li>
+        <li><a target="_blank" class="soc-twitter  soc-icon-last" href="https://twitter.com/Hermion28758241"></a></li>
+
+      </ul>
+
+
+
+    </div>
+  </div>
+  
+</div>
+
+
+
+
+
   </div>
 </div>
 
