--- a/travel.html
+++ b/travel.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/socicon.css">
     <link rel="stylesheet" href="css/ring.css">
  -->
+ <link rel="stylesheet" href="css/socicon.css">
     <link rel="stylesheet" href="css/swipebox.min.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
     <!-- <link rel="stylesheet" href="css/loading.css"> -->
