--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
     <div id="latest-textbox">
       <h4 id="latest-text">Latest Release</h4>
 
-      <p class="latest-intro">Updated works below. 
+      <!-- <p class="latest-intro">Updated works below. 
       
-      <!-- Catch precious memories to be remembered
+      Catch precious memories to be remembered
       <br>
       in all of your lifetime. -->
       </p>
