--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       
       Catch precious memories to be remembered
       <br>
-      in all of your lifetime. -->
-      </p>
+      in all of your lifetime. 
+      </p>-->
     </div>
 
   </div>
