--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
     <source media="(min-device-width: 800px)"
     srcset="img/index-banner-flat.jpg" 
     />
+    <source media="(min-device-width: 800px)and(orientation: landscape)"
+    srcset="img/index-banner.jpg" 
+    />
     <img src="img/index-banner.jpg" id="banner_img">
     </picture>
 
