--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <source media="(min-device-width: 800px)"
     srcset="img/index-banner-flat.jpg" 
     />
-    <source media="(min-device-width: 800px) and (orientation: landscape)"
+    <source media="(orientation: landscape)"
     srcset="img/index-banner.jpg" 
     />
     <img src="img/index-banner.jpg" id="banner_img">
