--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <picture>
     <source media="(orientation: landscape)"
-    srcset="img/index-banner.jpg" 
+    srcset="img/index-banner-flat.jpg" 
     />
     <source media="(min-device-width: 800px)"
     srcset="img/index-banner-flat.jpg" 
