--- a/life.html
+++ b/life.html
@@ -91,6 +91,9 @@
 
 
     <picture>
+    <source media="(orientation: landscape)"
+    srcset="img/life-banner-flat.jpg" 
+    />
     <source media="(min-device-width: 800px)"
     srcset="img/life-banner-flat.jpg" 
     />
