--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -92,6 +92,9 @@
     <div id="banner" class="col-12">
     
     <picture>
+    <source media="(orientation: landscape)"
+    srcset="img/pre-wedding-banner-flat.jpg" 
+    />
     <source media="(min-device-width: 800px)"
     srcset="img/pre-wedding-banner-flat.jpg" 
     />
