--- a/travel.html
+++ b/travel.html
@@ -91,6 +91,9 @@
     <div id="banner" class="col-12">
     
     <picture>
+    <source media="(orientation: landscape)"
+    srcset="img/travel-banner-flat.jpg" 
+    />
     <source media="(min-device-width: 800px)"
     srcset="img/travel-banner-flat.jpg" 
     />
