--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -98,7 +98,7 @@
     <source media="(min-device-width: 800px)"
     srcset="img/pre-wedding-banner-flat.jpg" 
     />
-    <img src="img/pre-wedding-banner.jpg" id="banner_img">
+    <img src="img/pre-wedding-banner-800.jpg" id="banner_img">
     </picture>
         
    
