--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     srcset="img/index-banner-flat.jpg" 
     />
     
-    <img src="img/index-banner.jpg" id="banner_img">
+    <img src="img/index-banner-800.jpg" id="banner_img">
     </picture>
 
     
