--- a/life.html
+++ b/life.html
@@ -97,7 +97,7 @@
     <source media="(min-device-width: 800px)"
     srcset="img/life-banner-flat.jpg" 
     />
-    <img src="img/life-banner.jpg" id="banner_img">
+    <img src="img/life-banner-800.jpg" id="banner_img">
     </picture>
   
         
