--- a/portrait.html
+++ b/portrait.html
@@ -98,7 +98,7 @@
     <source media="(min-device-width: 800px)"
     srcset="img/portrait-banner-flat.jpg" 
     />
-    <img src="img/portrait-banner.jpg" id="banner_img">
+    <img src="img/portrait-banner-800.jpg" id="banner_img">
     </picture>
         
    
