--- a/travel.html
+++ b/travel.html
@@ -97,7 +97,7 @@
     <source media="(min-device-width: 800px)"
     srcset="img/travel-banner-flat.jpg" 
     />
-    <img src="img/travel-banner.jpg" id="banner_img">
+    <img src="img/travel-banner-800.jpg" id="banner_img">
     </picture>
         
    
