--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -113,50 +113,50 @@
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/pre-wedding/1.jpg" >
-            <img src="photos/pre-wedding/1-1000.jpg" />
+        <a href="photos/pre-wedding/1-1000.jpg" >
+            <img src="photos/pre-wedding/1-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/2.jpg">
-            <img src="photos/pre-wedding/2-1000.jpg" />
+        <a href="photos/pre-wedding/2-1000.jpg">
+            <img src="photos/pre-wedding/2-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/3.jpg" >
-            <img src="photos/pre-wedding/3-1000.jpg" />
+        <a href="photos/pre-wedding/3-1000.jpg" >
+            <img src="photos/pre-wedding/3-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/4.jpg">
-            <img src="photos/pre-wedding/4-1000.jpg" />
+        <a href="photos/pre-wedding/4-1000.jpg">
+            <img src="photos/pre-wedding/4-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/5.jpg">
-            <img src="photos/pre-wedding/5-1000.jpg" />
+        <a href="photos/pre-wedding/5-1000.jpg">
+            <img src="photos/pre-wedding/5-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/6.jpg">
-            <img src="photos/pre-wedding/6-1000.jpg" />
+        <a href="photos/pre-wedding/6-1000.jpg">
+            <img src="photos/pre-wedding/6-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/7.jpg">
-            <img src="photos/pre-wedding/7-1000.jpg" />
+        <a href="photos/pre-wedding/7-1000.jpg">
+            <img src="photos/pre-wedding/7-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/8.jpg" >
-            <img src="photos/pre-wedding/8-1000.jpg" />
+        <a href="photos/pre-wedding/8-1000.jpg" >
+            <img src="photos/pre-wedding/8-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/9.jpg" >
-            <img src="photos/pre-wedding/9-1000.jpg" />
+        <a href="photos/pre-wedding/9-1000.jpg" >
+            <img src="photos/pre-wedding/9-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/10.jpg" >
-            <img src="photos/pre-wedding/10-1000.jpg" />
+        <a href="photos/pre-wedding/10-1000.jpg" >
+            <img src="photos/pre-wedding/10-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/11.jpg">
-            <img src="photos/pre-wedding/11-1000.jpg" />
+        <a href="photos/pre-wedding/11-1000.jpg">
+            <img src="photos/pre-wedding/11-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/12.jpg">
-            <img src="photos/pre-wedding/12-1000.jpg" />
+        <a href="photos/pre-wedding/12-1000.jpg">
+            <img src="photos/pre-wedding/12-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/13.jpg" >
-            <img src="photos/pre-wedding/13-1000.jpg" />
+        <a href="photos/pre-wedding/13-1000.jpg" >
+            <img src="photos/pre-wedding/13-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/14.jpg">
-            <img src="photos/pre-wedding/14-1000.jpg" />
+        <a href="photos/pre-wedding/14-1000.jpg">
+            <img src="photos/pre-wedding/14-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/15.jpg">
-            <img src="photos/pre-wedding/15-1000.jpg" />
+        <a href="photos/pre-wedding/15-1000.jpg">
+            <img src="photos/pre-wedding/15-800.jpg" />
         </a>
 
       </div>
