--- a/portrait.html
+++ b/portrait.html
@@ -113,50 +113,50 @@
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/portrait/1.jpg" >
-            <img src="photos/portrait/1-1000.jpg" />
+      <a href="photos/portrait/1-1000.jpg" >
+            <img src="photos/portrait/1-800.jpg" />
         </a>
-        <a href="photos/portrait/2.jpg">
-            <img src="photos/portrait/2-1000.jpg" />
+        <a href="photos/portrait/2-1000.jpg">
+            <img src="photos/portrait/2-800.jpg" />
         </a>
-        <a href="photos/portrait/3.jpg" >
-            <img src="photos/portrait/3-1000.jpg" />
+        <a href="photos/portrait/3-1000.jpg" >
+            <img src="photos/portrait/3-800.jpg" />
         </a>
-        <a href="photos/portrait/4.jpg">
-            <img src="photos/portrait/4-1000.jpg" />
+        <a href="photos/portrait/4-1000.jpg">
+            <img src="photos/portrait/4-800.jpg" />
         </a>
-        <a href="photos/portrait/5.jpg">
-            <img src="photos/portrait/5-1000.jpg" />
+        <a href="photos/portrait/5-1000.jpg">
+            <img src="photos/portrait/5-800.jpg" />
         </a>
-        <a href="photos/portrait/6.jpg">
-            <img src="photos/portrait/6-1000.jpg" />
+        <a href="photos/portrait/6-1000.jpg">
+            <img src="photos/portrait/6-800.jpg" />
         </a>
-        <a href="photos/portrait/7.jpg">
-            <img src="photos/portrait/7-1000.jpg" />
+        <a href="photos/portrait/7-1000.jpg">
+            <img src="photos/portrait/7-800.jpg" />
         </a>
-        <a href="photos/portrait/8.jpg" >
-            <img src="photos/portrait/8-1000.jpg" />
+        <a href="photos/portrait/8-1000.jpg" >
+            <img src="photos/portrait/8-800.jpg" />
         </a>
-        <a href="photos/portrait/9.jpg" >
-            <img src="photos/portrait/9-1000.jpg" />
+        <a href="photos/portrait/9-1000.jpg" >
+            <img src="photos/portrait/9-800.jpg" />
         </a>
-        <a href="photos/portrait/10.jpg" >
-            <img src="photos/portrait/10-1000.jpg" />
+        <a href="photos/portrait/10-1000.jpg" >
+            <img src="photos/portrait/10-800.jpg" />
         </a>
-        <a href="photos/portrait/11.jpg">
-            <img src="photos/portrait/11-1000.jpg" />
+        <a href="photos/portrait/11-1000.jpg">
+            <img src="photos/portrait/11-800.jpg" />
         </a>
-        <a href="photos/portrait/12.jpg">
-            <img src="photos/portrait/12-1000.jpg" />
+        <a href="photos/portrait/12-1000.jpg">
+            <img src="photos/portrait/12-800.jpg" />
         </a>
-        <a href="photos/portrait/13.jpg" >
-            <img src="photos/portrait/13-1000.jpg" />
+        <a href="photos/portrait/13-1000.jpg" >
+            <img src="photos/portrait/13-800.jpg" />
         </a>
-        <a href="photos/portrait/14.jpg">
-            <img src="photos/portrait/14-1000.jpg" />
+        <a href="photos/portrait/14-1000.jpg">
+            <img src="photos/portrait/14-800.jpg" />
         </a>
-        <a href="photos/portrait/15.jpg">
-            <img src="photos/portrait/15-1000.jpg" />
+        <a href="photos/portrait/15-1000.jpg">
+            <img src="photos/portrait/15-800.jpg" />
         </a>
 
       </div>
