--- a/travel.html
+++ b/travel.html
@@ -112,50 +112,50 @@
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/travel/1.jpg" >
-            <img src="photos/travel/1-1000.jpg" />
+      <a href="photos/travel/1-1000.jpg" >
+            <img src="photos/travel/1-800.jpg" />
         </a>
-        <a href="photos/travel/2.jpg">
-            <img src="photos/travel/2-1000.jpg" />
+        <a href="photos/travel/2-1000.jpg">
+            <img src="photos/travel/2-800.jpg" />
         </a>
-        <a href="photos/travel/3.jpg" >
-            <img src="photos/travel/3-1000.jpg" />
+        <a href="photos/travel/3-1000.jpg" >
+            <img src="photos/travel/3-800.jpg" />
         </a>
-        <a href="photos/travel/4.jpg">
-            <img src="photos/travel/4-1000.jpg" />
+        <a href="photos/travel/4-1000.jpg">
+            <img src="photos/travel/4-800.jpg" />
         </a>
-        <a href="photos/travel/5.jpg">
-            <img src="photos/travel/5-1000.jpg" />
+        <a href="photos/travel/5-1000.jpg">
+            <img src="photos/travel/5-800.jpg" />
         </a>
-        <a href="photos/travel/6.jpg">
-            <img src="photos/travel/6-1000.jpg" />
+        <a href="photos/travel/6-1000.jpg">
+            <img src="photos/travel/6-800.jpg" />
         </a>
-        <a href="photos/travel/7.jpg">
-            <img src="photos/travel/7-1000.jpg" />
+        <a href="photos/travel/7-1000.jpg">
+            <img src="photos/travel/7-800.jpg" />
         </a>
-        <a href="photos/travel/8.jpg" >
-            <img src="photos/travel/8-1000.jpg" />
+        <a href="photos/travel/8-1000.jpg" >
+            <img src="photos/travel/8-800.jpg" />
         </a>
-        <a href="photos/travel/9.jpg" >
-            <img src="photos/travel/9-1000.jpg" />
+        <a href="photos/travel/9-1000.jpg" >
+            <img src="photos/travel/9-800.jpg" />
         </a>
-        <a href="photos/travel/10.jpg" >
-            <img src="photos/travel/10-1000.jpg" />
+        <a href="photos/travel/10-1000.jpg" >
+            <img src="photos/travel/10-800.jpg" />
         </a>
-        <a href="photos/travel/11.jpg">
-            <img src="photos/travel/11-1000.jpg" />
+        <a href="photos/travel/11-1000.jpg">
+            <img src="photos/travel/11-800.jpg" />
         </a>
-        <a href="photos/travel/12.jpg">
-            <img src="photos/travel/12-1000.jpg" />
+        <a href="photos/travel/12-1000.jpg">
+            <img src="photos/travel/12-800.jpg" />
         </a>
-        <a href="photos/travel/13.jpg" >
-            <img src="photos/travel/13-1000.jpg" />
+        <a href="photos/travel/13-1000.jpg" >
+            <img src="photos/travel/13-800.jpg" />
         </a>
-        <a href="photos/travel/14.jpg">
-            <img src="photos/travel/14-1000.jpg" />
+        <a href="photos/travel/14-1000.jpg">
+            <img src="photos/travel/14-800.jpg" />
         </a>
-        <a href="photos/travel/15.jpg">
-            <img src="photos/travel/15-1000.jpg" />
+        <a href="photos/travel/15-1000.jpg">
+            <img src="photos/travel/15-800.jpg" />
         </a>
 
       </div>
