--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -119,10 +119,10 @@
         <a href="photos/pre-wedding/2-1000.jpg">
             <img src="photos/pre-wedding/2-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/3-1000.jpg" >
+        <a href="photos/pre-wedding/2.jpg" >
             <img src="photos/pre-wedding/3-800.jpg" />
         </a>
-        <a href="photos/pre-wedding/4-1000.jpg">
+        <a href="photos/pre-wedding/2-1500.jpg">
             <img src="photos/pre-wedding/4-800.jpg" />
         </a>
         <a href="photos/pre-wedding/5-1000.jpg">
