--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </div> -->
       
     <div id="latest-textbox">
-      <h4 id="latest-text">Latest Release</h4>
+      <h4 id="latest-text">One moment shoot, memories forever.</h4>
 
       <!-- <p class="latest-intro">Updated works below. 
       
@@ -199,7 +199,9 @@
 
   </div>
 
-
+<div class="col-12">
+  <h4 class="gallary-title">Latest Release</h4>
+</div>
 
 <div class="frame" id="basic">
     <ul class="clearfix">
