--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   </div>
 
 <div class="col-12">
-  <h4 class="gallary-title">Latest Release</h4>
+  <h4 class="sub-title">Latest Release</h4>
 </div>
 
 <div class="frame" id="basic">
