--- a/index0923.html
+++ b/index0923.html
@@ -38,7 +38,7 @@
     <a href="portrait.html"><li><div>Portrait</div></li></a>
     <a href="travel.html"><li><div>Travel</div></li></a>
     <a href="life.html"><li><div>Life</div></li></a>
-    <a href="me.html"><div>Me</div></li>
+    <li onclick="gotome()"><div>Me</div></li>
 
   </ul>
 </nav>
@@ -222,11 +222,59 @@
 
 
 
+<div id="me" class="row">
+
+  <div id="me-image" class="col-12">
+    <h4 id="me-title">About Me</h4>
+  </div>
+
+  <div id="me-intro-box" class="col-12">
+    <p id="me-intro-p">
+    I grew up in Fuzhou, China. 
+    <br>
+    After graduating from HKUST,  
+    I am working in HK as an IT engineer and a part-time photographer.
+    <br><br>
+    Besides photography, I am also keen on web development, walking dogs and eating spicy hot-pot, etc.  
+    <p>
+  </div>
+
+</div>
+
+
+
+<div id="contact" class="row">
+
+  <div id="contact-img" class="col-12">
+    <h4 class="col-12" id="contact-title">Get in touch</h4>
+  </div>
+ 
+  <div id="contact-container" class="row">
+    <div id="contact-form" class="col-12">
+        <input type="text" id="sender" placeholder="Name" class="form-element col-12">
+        <input type="text" id="senderEmail" placeholder="E-mail *" class="form-element col-12">  
+        <input type="text" id="subject" placeholder="Subject" class="form-element col-12"> 
+        <textarea id="message" placeholder="Message *" class="form-element col-12"></textarea>
+        <button onclick="gotosendemail()" class="form-element col-3" id="send-btn"><div>Send</div></button>
+        
+        <div id="email-result-container" class="result-flex hide-result">
+          <div id="email-result">
+
+          </div>
+        </div>
+    </div>
+
+    <div class="col-12" id="contact-info">
+      <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span><span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span>
+      <span class="contact-content"><b>Wechat: </b>Yao_Hermione</span>
+      <span class="contact-content"><b>Weibo: </b>Hermione_MoveOn</span>
+    </div>
+  </div> 
 
 
 
 
-
+</div>
 
 <div class="footer row">
 
