--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <li class="horizontal"><a href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a href="travel.html">Travel</a></li>
     <li class="horizontal"><a href="life.html">Life</a></li>
-    <li class="horizontal"><div><a href="#me">Me</a></div></li>
+    <li class="horizontal"><a href="me.html">Me</a></div></li>
   </ul>
 </div>
 
