--- a/travel.html
+++ b/travel.html
@@ -41,7 +41,7 @@
     <a href="portrait.html"><li ><div>Portrait</div></li></a>
     <a href="travel.html"><li class="selectedpage" ><div>Travel</div></li></a>
     <a href="life.html"><li><div>Life</div></li></a>
-    <li onclick="gotome()"><div>Me</div></li>
+    <a href="me.html"><li><div>Me</div></li></a>
 
   </ul>
 </nav>
@@ -77,7 +77,7 @@
     <li class="horizontal"><a href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a class="selectedpage"  href="travel.html">Travel</a></li>
     <li class="horizontal"><a href="life.html">Life</a></li>
-    <li class="horizontal"><div><a href="https://yaohermione.github.io/#me">Me</a></div></li>
+    <li class="horizontal"><a href="me.html">Me</a></div></li>
   </ul>
 </div>
 
