--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href="portrait.html"><li><div>Portrait</div></li></a>
     <a href="travel.html"><li><div>Travel</div></li></a>
     <a href="life.html"><li><div>Life</div></li></a>
-    <a href="me.html"><div>Me</div></li>
+    <a href="me.html"><li><div>Me</div></li></a>
 
   </ul>
 </nav>
