--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
 <div class="col-12">
-  <h4 class="gallary-title">Gallary</h4>
+  <h4 class="gallary-title">Gallery</h4>
 </div>
 
 <div class="row gallery-container">
