--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@
   <h4 class="sub-title">About Me</h4>
 </div>
 
-<div class="row">
-  <div class="col-12 mypic" style="border: 1px solid red;">
-    
+
+<div class="row aboutme">
+  <div class="col-12 mypic-box" style="border: 1px solid red;">
+    <img class="mypic" src="img/mypic.jpg" />
   </div>
   <div class="col-12 myintro" style="border: 1px solid blue;">
     
