--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 <div class="row aboutme">
   <div class="col-12 mypic-box" style="border: 1px solid red;">
-    <img class="mypic" src="img/mypic.jpg" />
+    <img class="mypic" src="img/mypic.png" />
   </div>
   <div class="col-12 myintro" style="border: 1px solid blue;">
     
