--- a/index.html
+++ b/index.html
@@ -228,7 +228,14 @@
     <img class="mypic" src="img/mypic.png" />
   </div>
   <div class="col-12 myintro" style="border: 1px solid blue;">
-    
+     <p id="me-intro-p">
+    I grew up in Fuzhou, China. 
+    <br>
+    After graduating from HKUST,  
+    I am working in HK as an IT engineer and a part-time photographer.
+    <br><br>
+    Besides photography, I am also keen on web development, walking dogs and eating spicy hot-pot, etc.  
+    <p>
   </div>
 </div>
 
