--- a/me.html
+++ b/me.html
@@ -85,30 +85,17 @@
 
 <div id="content">
 
- <div id="below-banner">
+ <div id="below-banner" style="padding-top: 0px;">
 
 
 
 
 
-<div id="me" class="row">
-
+<div id="me" class="row" >
   <div id="me-image" class="col-12">
-    <h4 id="me-title">About Me</h4>
   </div>
-
-  <div id="me-intro-box" class="col-12">
-    <p id="me-intro-p">
-    I grew up in Fuzhou, China. 
-    <br>
-    After graduating from HKUST,  
-    I am working in HK as an IT engineer and a part-time photographer.
-    <br><br>
-    Besides photography, I am also keen on web development, walking dogs and eating spicy hot-pot, etc.  
-    <p>
-  </div>
-
 </div>
+
 <div id="contact" class="row">
 
   <div id="contact-img" class="col-12">
