--- a/me.html
+++ b/me.html
@@ -96,6 +96,13 @@
   </div>
 </div>
 
+
+<div class="col-12">
+  <h4 class="sub-title">Contact me</h4>
+</div>
+
+
+
 <div id="contact" class="row">
 
   <div id="contact-img" class="col-12">
