--- a/me.html
+++ b/me.html
@@ -85,17 +85,37 @@
 
 <div id="content">
 
+ <div id="banner" class="col-12">
+    
+
+
+    <picture>
+    <source media="(orientation: landscape)"
+    srcset="img/contact-banner-flat.jpg" 
+    />
+    <source media="(min-device-width: 800px)"
+    srcset="img/contact-banner-flat.jpg" 
+    />
+    <img src="img/contact-banner-800.jpg" id="banner_img">
+    </picture>
+  
+        
+   
+</div>
+
+
+
  <div id="below-banner" style="padding-top: 0px;">
 
 
 
 
-
+<!--
 <div id="me" class="row" >
   <div id="me-image" class="col-12">
   </div>
 </div>
-
+-->
 
 <div class="col-12">
   <h4 class="sub-title">Contact me</h4>
