--- a/me.html
+++ b/me.html
@@ -118,7 +118,7 @@
 -->
 
 <div class="col-12">
-  <h4 class="sub-title">Contact me</h4>
+  <h4 class="sub-title">Get in touch</h4>
 </div>
 
 
@@ -126,7 +126,7 @@
 <div id="contact" class="row">
 
   <div id="contact-img" class="col-12">
-    <h4 class="col-12" id="contact-title">Get in touch</h4>
+    <h4 class="col-12" id="contact-title"></h4>
   </div>
  
   <div id="contact-container" class="row">
