--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href="portrait.html"><li><div>Portrait</div></li></a>
     <a href="travel.html"><li><div>Travel</div></li></a>
     <a href="life.html"><li><div>Life</div></li></a>
-    <a href="me.html"><li><div>Me</div></li></a>
+    <a href="me.html"><li><div>Contact</div></li></a>
 
   </ul>
 </nav>
@@ -74,7 +74,7 @@
     <li class="horizontal"><a href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a href="travel.html">Travel</a></li>
     <li class="horizontal"><a href="life.html">Life</a></li>
-    <li class="horizontal"><a href="me.html">Me</a></div></li>
+    <li class="horizontal"><a href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
