--- a/me.html
+++ b/me.html
@@ -38,8 +38,8 @@
     <a href="pre-wedding.html"><li ><div>Pre-wedding</div></li></a>
     <a href="portrait.html"><li ><div>Portrait</div></li></a>
     <a href="travel.html"><li ><div>Travel</div></li></a>
-    <a href="life.html"><li class="selectedpage"><div>Life</div></li></a>
-    <a href="me.html"><li><div>Contact</div></li></a>
+    <a href="life.html"><li><div>Life</div></li></a>
+    <a href="me.html"><li class="selectedpage"><div>Contact</div></li></a>
 
   </ul>
 </nav>
