--- a/me.html
+++ b/me.html
@@ -74,8 +74,8 @@
         <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><a href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a href="travel.html">Travel</a></li>
-    <li class="horizontal"><a class="selectedpage" href="life.html">Life</a></li>
-    <li class="horizontal"><a href="me.html">Contact</a></div></li>
+    <li class="horizontal"><a href="life.html">Life</a></li>
+    <li class="horizontal"><a class="selectedpage"  href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
