--- a/me.html
+++ b/me.html
@@ -222,7 +222,8 @@
   <script src="js/test.js"></script>
   <script src="js/jquery.swipebox.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
-
+<script src="js/sly.min.js"></script>
+  <script src="js/sendemailfunc.js"></script>
  
       <script>
     $('.swipeboxEx').each(function(i, el) {
