--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -158,7 +158,39 @@
         <a href="photos/pre-wedding/15-1500.jpg">
             <img src="photos/pre-wedding/15-800.jpg" />
         </a>
-
+        <a href="photos/pre-wedding/16-1500.jpg" >
+            <img src="photos/pre-wedding/16-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/17-1500.jpg">
+            <img src="photos/pre-wedding/17-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/18-1500.jpg" >
+            <img src="photos/pre-wedding/18-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/19-1500.jpg">
+            <img src="photos/pre-wedding/19-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/20-1500.jpg">
+            <img src="photos/pre-wedding/20-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/21-1500.jpg">
+            <img src="photos/pre-wedding/21-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/22-1500.jpg">
+            <img src="photos/pre-wedding/22-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/23-1500.jpg">
+            <img src="photos/pre-wedding/23-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/24-1500.jpg">
+            <img src="photos/pre-wedding/24-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/25-1500.jpg">
+            <img src="photos/pre-wedding/25-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/26-1500.jpg">
+            <img src="photos/pre-wedding/26-800.jpg" />
+        </a>
       </div>
 
 
