--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -191,6 +191,33 @@
         <a href="photos/pre-wedding/26-1500.jpg">
             <img src="photos/pre-wedding/26-800.jpg" />
         </a>
+        <a href="photos/pre-wedding/27-1500.jpg" >
+            <img src="photos/pre-wedding/27-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/28-1500.jpg">
+            <img src="photos/pre-wedding/28-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/29-1500.jpg" >
+            <img src="photos/pre-wedding/29-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/30-1500.jpg">
+            <img src="photos/pre-wedding/30-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/31-1500.jpg">
+            <img src="photos/pre-wedding/31-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/32-1500.jpg">
+            <img src="photos/pre-wedding/32-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/33-1500.jpg">
+            <img src="photos/pre-wedding/33-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/34-1500.jpg" >
+            <img src="photos/pre-wedding/34-800.jpg" />
+        </a>
+        <a href="photos/pre-wedding/35-1500.jpg" >
+            <img src="photos/pre-wedding/35-800.jpg" />
+        </a>
       </div>
 
 
