--- a/portrait.html
+++ b/portrait.html
@@ -113,7 +113,7 @@
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/portrait/1-1500.jpg" >
+        <a href="photos/portrait/1-1500.jpg" >
             <img src="photos/portrait/1-800.jpg" />
         </a>
         <a href="photos/portrait/2-1500.jpg">
@@ -158,7 +158,36 @@
         <a href="photos/portrait/15-1500.jpg">
             <img src="photos/portrait/15-800.jpg" />
         </a>
-
+        <a href="photos/portrait/16-1500.jpg" >
+            <img src="photos/portrait/16-800.jpg" />
+        </a>
+        <a href="photos/portrait/17-1500.jpg">
+            <img src="photos/portrait/17-800.jpg" />
+        </a>
+        <a href="photos/portrait/18-1500.jpg" >
+            <img src="photos/portrait/18-800.jpg" />
+        </a>
+        <a href="photos/portrait/19-1500.jpg">
+            <img src="photos/portrait/19-800.jpg" />
+        </a>
+        <a href="photos/portrait/20-1500.jpg">
+            <img src="photos/portrait/20-800.jpg" />
+        </a>
+        <a href="photos/portrait/21-1500.jpg">
+            <img src="photos/portrait/21-800.jpg" />
+        </a>
+        <a href="photos/portrait/22-1500.jpg">
+            <img src="photos/portrait/22-800.jpg" />
+        </a>
+        <a href="photos/portrait/23-1500.jpg" >
+            <img src="photos/portrait/23-800.jpg" />
+        </a>
+        <a href="photos/portrait/24-1500.jpg" >
+            <img src="photos/portrait/24-800.jpg" />
+        </a>
+        <a href="photos/portrait/25-1500.jpg" >
+            <img src="photos/portrait/25-800.jpg" />
+        </a>
       </div>
 
 
