--- a/portrait.html
+++ b/portrait.html
@@ -188,6 +188,61 @@
         <a href="photos/portrait/25-1500.jpg" >
             <img src="photos/portrait/25-800.jpg" />
         </a>
+        <a href="photos/portrait/26-1500.jpg" >
+            <img src="photos/portrait/26-800.jpg" />
+        </a>
+        <a href="photos/portrait/27-1500.jpg">
+            <img src="photos/portrait/27-800.jpg" />
+        </a>
+        <a href="photos/portrait/28-1500.jpg" >
+            <img src="photos/portrait/28-800.jpg" />
+        </a>
+        <a href="photos/portrait/29-1500.jpg">
+            <img src="photos/portrait/29-800.jpg" />
+        </a>
+        <a href="photos/portrait/30-1500.jpg">
+            <img src="photos/portrait/30-800.jpg" />
+        </a>
+        <a href="photos/portrait/31-1500.jpg">
+            <img src="photos/portrait/31-800.jpg" />
+        </a>
+        <a href="photos/portrait/32-1500.jpg">
+            <img src="photos/portrait/32-800.jpg" />
+        </a>
+        <a href="photos/portrait/33-1500.jpg" >
+            <img src="photos/portrait/33-800.jpg" />
+        </a>
+        <a href="photos/portrait/34-1500.jpg" >
+            <img src="photos/portrait/34-800.jpg" />
+        </a>
+        <a href="photos/portrait/35-1500.jpg" >
+            <img src="photos/portrait/35-800.jpg" />
+        </a>
+        <a href="photos/portrait/36-1500.jpg">
+            <img src="photos/portrait/36-800.jpg" />
+        </a>
+        <a href="photos/portrait/37-1500.jpg">
+            <img src="photos/portrait/37-800.jpg" />
+        </a>
+        
+        <a href="photos/portrait/38-1500.jpg">
+            <img src="photos/portrait/38-800.jpg" />
+        </a>
+        <a href="photos/portrait/39-1500.jpg">
+            <img src="photos/portrait/39-800.jpg" />
+        </a>
+        <a href="photos/portrait/40-1500.jpg" >
+            <img src="photos/portrait/16-800.jpg" />
+        </a>
+        <a href="photos/portrait/41-1500.jpg">
+            <img src="photos/portrait/41-800.jpg" />
+        </a>
+        <a href="photos/portrait/42-1500.jpg" >
+            <img src="photos/portrait/24-800.jpg" />
+        </a>
+        <a href="photos/portrait/43-1500.jpg" >
+            <img src="photos/portrait/43-800.jpg" />
+        </a>
       </div>
 
 
