--- a/travel.html
+++ b/travel.html
@@ -180,6 +180,74 @@
         </a>
         <a href="photos/travel/23-1500.jpg" >
             <img src="photos/travel/23-800.jpg" />
+        </a><a href="photos/travel/1-1500.jpg" >
+            <img src="photos/travel/1-800.jpg" />
+        </a>
+        <a href="photos/travel/24-1500.jpg">
+            <img src="photos/travel/24-800.jpg" />
+        </a>
+        <a href="photos/travel/25-1500.jpg" >
+            <img src="photos/travel/25-800.jpg" />
+        </a>
+        <a href="photos/travel/26-1500.jpg">
+            <img src="photos/travel/26-800.jpg" />
+        </a>
+        <a href="photos/travel/27-1500.jpg">
+            <img src="photos/travel/27-800.jpg" />
+        </a>
+        <a href="photos/travel/28-1500.jpg">
+            <img src="photos/travel/28-800.jpg" />
+        </a>
+        <a href="photos/travel/29-1500.jpg">
+            <img src="photos/travel/29-800.jpg" />
+        </a>
+        <a href="photos/travel/30-1500.jpg" >
+            <img src="photos/travel/30-800.jpg" />
+        </a>
+        <a href="photos/travel/31-1500.jpg" >
+            <img src="photos/travel/31-800.jpg" />
+        </a>
+        <a href="photos/travel/32-1500.jpg" >
+            <img src="photos/travel/32-800.jpg" />
+        </a>
+        <a href="photos/travel/33-1500.jpg">
+            <img src="photos/travel/33-800.jpg" />
+        </a>
+        <a href="photos/travel/34-1500.jpg">
+            <img src="photos/travel/34-800.jpg" />
+        </a>
+        <a href="photos/travel/35-1500.jpg" >
+            <img src="photos/travel/35-800.jpg" />
+        </a>
+        <a href="photos/travel/36-1500.jpg">
+            <img src="photos/travel/36-800.jpg" />
+        </a>
+        <a href="photos/travel/37-1500.jpg">
+            <img src="photos/travel/37-800.jpg" />
+        </a>
+        <a href="photos/travel/38-1500.jpg" >
+            <img src="photos/travel/38-800.jpg" />
+        </a>
+        <a href="photos/travel/39-1500.jpg">
+            <img src="photos/travel/39-800.jpg" />
+        </a>
+        <a href="photos/travel/40-1500.jpg" >
+            <img src="photos/travel/40-800.jpg" />
+        </a>
+        <a href="photos/travel/41-1500.jpg">
+            <img src="photos/travel/41-800.jpg" />
+        </a>
+        <a href="photos/travel/42-1500.jpg">
+            <img src="photos/travel/42-800.jpg" />
+        </a>
+        <a href="photos/travel/43-1500.jpg">
+            <img src="photos/travel/43-800.jpg" />
+        </a>
+        <a href="photos/travel/44-1500.jpg">
+            <img src="photos/travel/44-800.jpg" />
+        </a>
+        <a href="photos/travel/45-1500.jpg" >
+            <img src="photos/travel/45-800.jpg" />
         </a>
       </div>
 
