--- a/travel.html
+++ b/travel.html
@@ -181,7 +181,7 @@
         <a href="photos/travel/23-1500.jpg" >
             <img src="photos/travel/23-800.jpg" />
         </a>
-       
+
         <a href="photos/travel/24-1500.jpg">
             <img src="photos/travel/24-800.jpg" />
         </a>
@@ -247,6 +247,39 @@
         </a>
         <a href="photos/travel/45-1500.jpg" >
             <img src="photos/travel/45-800.jpg" />
+        </a>
+        <a href="photos/travel/46-1500.jpg" >
+            <img src="photos/travel/46-800.jpg" />
+        </a>
+        <a href="photos/travel/47-1500.jpg">
+            <img src="photos/travel/47-800.jpg" />
+        </a>
+        <a href="photos/travel/48-1500.jpg" >
+            <img src="photos/travel/48-800.jpg" />
+        </a>
+        <a href="photos/travel/49-1500.jpg">
+            <img src="photos/travel/49-800.jpg" />
+        </a>
+        <a href="photos/travel/50-1500.jpg">
+            <img src="photos/travel/50-800.jpg" />
+        </a>
+        <a href="photos/travel/51-1500.jpg">
+            <img src="photos/travel/51-800.jpg" />
+        </a>
+        <a href="photos/travel/52-1500.jpg">
+            <img src="photos/travel/52-800.jpg" />
+        </a>
+        <a href="photos/travel/53-1500.jpg" >
+            <img src="photos/travel/53-800.jpg" />
+        </a>
+        <a href="photos/travel/54-1500.jpg" >
+            <img src="photos/travel/54-800.jpg" />
+        </a>
+        <a href="photos/travel/55-1500.jpg" >
+            <img src="photos/travel/55-800.jpg" />
+        </a>
+        <a href="photos/travel/56-1500.jpg" >
+            <img src="photos/travel/56-800.jpg" />
         </a>
       </div>
 
