--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <div id="latest">
       
     <div id="latest-textbox">
-      <h4 id="latest-text">One moment shoot, memories forever.</h4>  
+      <h4 id="latest-text">ONE MOMENT SHOOT, MEMORIES FOREVER.</h4>  
     </div>
 
 </div>
@@ -213,7 +213,7 @@
 <div id="touching">
       
     <div id="touching-textbox">
-      <h4 id="touching-text">Walk together, capture touching pictures.</h4>  
+      <h4 id="touching-text">WALK TOGETHER, CAPTURE TOUCHING PICTURES.</h4>  
     </div>
 
 </div>
