--- a/me.html
+++ b/me.html
@@ -123,7 +123,7 @@
 
 
 
-<div id="contact" class="row">
+<div id="contact" class="">
 
   <div id="contact-img" class="col-12">
     <h4 class="col-12" id="contact-title"></h4>
