--- a/life.html
+++ b/life.html
@@ -152,7 +152,15 @@
         <a href="photos/life/13-1500.jpg" >
             <img src="photos/life/13-800.jpg" />
         </a>
-    
+        <a href="photos/life/14-1500.jpg">
+            <img src="photos/life/14-800.jpg" />
+        </a>
+        <a href="photos/life/15-1500.jpg">
+            <img src="photos/life/15-800.jpg" />
+        </a>
+        <a href="photos/life/16-1500.jpg" >
+            <img src="photos/life/16-800.jpg" />
+        </a>
 
       </div>
 
