--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -38,11 +38,11 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li class="selectedpage" ><div>Pre-wedding</div></li></a>
-    <a href="portrait.html"><li><div>Portrait</div></li></a>
-    <a href="travel.html"><li><div>Travel</div></li></a>
-    <a href="life.html"><li><div>Life</div></li></a>
-    <a href="me.html"><li><div>Contact</div></li></a>
+    <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li class="selectedpage" ><div>Portrait</div></li></a>
+    <a href="travel.html"><li class="selectedpage" ><div>Travel</div></li></a>
+    <a href="life.html"><li class="selectedpage" ><div>Life</div></li></a>
+    <a href="me.html"><li class="selectedpage" ><div>Contact</div></li></a>
 
   </ul>
 </nav>
@@ -74,11 +74,11 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><a class="selectedpage" href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal"><a href="portrait.html">Portrait</a></li>
-    <li class="horizontal"><a href="travel.html">Travel</a></li>
-    <li class="horizontal"><a href="life.html">Life</a></li>
-    <li class="horizontal"><a href="me.html">Contact</a></div></li>
+    <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
+    <li class="horizontal"><a class="selectedpage" href="portrait.html">Portrait</a></li>
+    <li class="horizontal"><a class="selectedpage" href="travel.html">Travel</a></li>
+    <li class="horizontal"><a class="selectedpage" href="life.html">Life</a></li>
+    <li class="horizontal"><a class="selectedpage" href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
