--- a/life.html
+++ b/life.html
@@ -35,11 +35,15 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li ><div>Pre-wedding</div></li></a>
-    <a href="portrait.html"><li ><div>Portrait</div></li></a>
-    <a href="travel.html"><li ><div>Travel</div></li></a>
-    <a href="life.html"><li class="selectedpage"><div>Life</div></li></a>
-    <a href="me.html"><li><div>Contact</div></li></a>
+    <a href="pre-wedding.html"><li class="
+notselectedpage"><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li class="
+notselectedpage"><div>Portrait</div></li></a>
+    <a href="travel.html"><li class="
+notselectedpage"><div>Travel</div></li></a>
+    <a href="life.html"><li ><div>Life</div></li></a>
+    <a href="me.html"><li class="
+notselectedpage"><div>Contact</div></li></a>
 
   </ul>
 </nav>
@@ -74,7 +78,8 @@
         <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><a href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a href="travel.html">Travel</a></li>
-    <li class="horizontal"><a class="selectedpage" href="life.html">Life</a></li>
+    <li class="horizontal"><a class="
+notselectedpage" href="life.html">Life</a></li>
     <li class="horizontal"><a href="me.html">Contact</a></div></li>
   </ul>
 </div>
