--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -39,10 +39,14 @@
 <nav id="drawer">
   <ul>
     <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
-    <a href="portrait.html"><li class="selectedpage" ><div>Portrait</div></li></a>
-    <a href="travel.html"><li class="selectedpage" ><div>Travel</div></li></a>
-    <a href="life.html"><li class="selectedpage" ><div>Life</div></li></a>
-    <a href="me.html"><li class="selectedpage" ><div>Contact</div></li></a>
+    <a href="portrait.html"><li class="
+notselectedpage" ><div>Portrait</div></li></a>
+    <a href="travel.html"><li class="
+notselectedpage" ><div>Travel</div></li></a>
+    <a href="life.html"><li class="
+notselectedpage" ><div>Life</div></li></a>
+    <a href="me.html"><li class="
+notselectedpage" ><div>Contact</div></li></a>
 
   </ul>
 </nav>
@@ -75,10 +79,14 @@
 <div class="h-menu">
    <ul>
     <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal"><a class="selectedpage" href="portrait.html">Portrait</a></li>
-    <li class="horizontal"><a class="selectedpage" href="travel.html">Travel</a></li>
-    <li class="horizontal"><a class="selectedpage" href="life.html">Life</a></li>
-    <li class="horizontal"><a class="selectedpage" href="me.html">Contact</a></div></li>
+    <li class="horizontal"><a class="
+notselectedpage" href="portrait.html">Portrait</a></li>
+    <li class="horizontal"><a class="
+notselectedpage" href="travel.html">Travel</a></li>
+    <li class="horizontal"><a class="
+notselectedpage" href="life.html">Life</a></li>
+    <li class="horizontal"><a class="
+notselectedpage" href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
