--- a/travel.html
+++ b/travel.html
@@ -37,11 +37,15 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li class="selectedpage" ><div>Pre-wedding</div></li></a>
-    <a href="portrait.html"><li class="selectedpage" ><div>Portrait</div></li></a>
+    <a href="pre-wedding.html"><li class="
+notselectedpage" ><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li class="
+notselectedpage" ><div>Portrait</div></li></a>
     <a href="travel.html"><li ><div>Travel</div></li></a>
-    <a href="life.html"><li class="selectedpage" ><div>Life</div></li></a>
-    <a href="me.html"><li class="selectedpage" ><div>Contact</div></li></a>
+    <a href="life.html"><li class="
+notselectedpage" ><div>Life</div></li></a>
+    <a href="me.html"><li class="
+notselectedpage" ><div>Contact</div></li></a>
 
   </ul>
 </nav>
@@ -73,11 +77,15 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><a class="selectedpage"  href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal"><a class="selectedpage"  href="portrait.html">Portrait</a></li>
+    <li class="horizontal"><a class="
+notselectedpage"  href="pre-wedding.html">Pre-wedding</a></li>
+    <li class="horizontal"><a class="
+notselectedpage"  href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a href="travel.html">Travel</a></li>
-    <li class="horizontal"><a class="selectedpage"  href="life.html">Life</a></li>
-    <li class="horizontal"><a class="selectedpage"  href="me.html">Contact</a></div></li>
+    <li class="horizontal"><a class="
+notselectedpage"  href="life.html">Life</a></li>
+    <li class="horizontal"><a class="
+notselectedpage"  href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
