--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal"><a href="portrait.html">Portrait</a></li>
-    <li class="horizontal"><a href="travel.html">Travel</a></li>
-    <li class="horizontal"><a href="life.html">Life</a></li>
-    <li class="horizontal"><a href="me.html">Contact</a></div></li>
+    <li class="horizontal mainpagenav"><a href="pre-wedding.html">Pre-wedding</a></li>
+    <li class="horizontal mainpagenav"><a href="portrait.html">Portrait</a></li>
+    <li class="horizontal mainpagenav"><a href="travel.html">Travel</a></li>
+    <li class="horizontal mainpagenav"><a href="life.html">Life</a></li>
+    <li class="horizontal mainpagenav"><a href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
