--- a/life.html
+++ b/life.html
@@ -77,8 +77,7 @@ notselectedpage" href="pre-wedding.html">Pre-wedding</a></li>
 notselectedpage" href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a class="
 notselectedpage" href="travel.html">Travel</a></li>
-    <li class="horizontal"><a class="
-notselectedpage" href="life.html">Life</a></li>
+    <li class="horizontal"><a href="life.html">Life</a></li>
     <li class="horizontal"><a class="
 notselectedpage" href="me.html">Contact</a></div></li>
   </ul>
