--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <script src="js/polyfill.min.js"></script>
 
 
-  
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
+  <!--
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>-->
+    <link rel="stylesheet" href="css/opensans.css">
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
@@ -23,8 +24,9 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
+-->
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
@@ -300,5 +302,6 @@
   <script src="js/plugins.js"></script>
   <script src="js/sly.min.js"></script>
   <script src="js/sendemailfunc.js"></script>
- 
+ <script src="js/ajax.js"></script>
+
 </html>
