--- a/life.html
+++ b/life.html
@@ -11,7 +11,9 @@
   </script>
   <script src="js/polyfill.min.js"></script>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
+      <!--
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>-->
+    <link rel="stylesheet" href="css/opensans.css">
     <link rel="stylesheet" href="css/css.css">
     <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
