--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal mainpagenav"><a href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal mainpagenav"><a href="portrait.html">Portrait</a></li>
-    <li class="horizontal mainpagenav"><a href="travel.html">Travel</a></li>
-    <li class="horizontal mainpagenav"><a href="life.html">Life</a></li>
-    <li class="horizontal mainpagenav"><a href="me.html">Contact</a></div></li>
+    <li class="horizontal mainpagenav"><a href="pre-wedding.html">婚纱Pre-wedding</a></li>
+    <li class="horizontal mainpagenav"><a href="portrait.html">人像Portrait</a></li>
+    <li class="horizontal mainpagenav"><a href="travel.html">旅行Travel</a></li>
+    <li class="horizontal mainpagenav"><a href="life.html">生活Life</a></li>
+    <li class="horizontal mainpagenav"><a href="me.html">联系Contact</a></div></li>
   </ul>
 </div>
 
