--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 
   <!--
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 
     <script src="js/webfont.js"></script>
-<script>
-  WebFont.load({
-    google: {
-      families: ['Open Sans']
-    }
-  });
-</script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Open Sans']
+        }
+      });
+    </script>-->
+    
     <link rel="stylesheet" href="css/opensans.css">
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/style.css">
