--- a/portrait.html
+++ b/portrait.html
@@ -253,6 +253,33 @@ notselectedpage" href="me.html">Contact</a></div></li>
         <a href="photos/portrait/43-1500.jpg" >
             <img src="photos/portrait/43-800.jpg" />
         </a>
+        <a href="photos/portrait/44-1500.jpg" >
+            <img src="photos/portrait/44-800.jpg" />
+        </a>
+        <a href="photos/portrait/45-1500.jpg">
+            <img src="photos/portrait/45-800.jpg" />
+        </a>
+        <a href="photos/portrait/46-1500.jpg" >
+            <img src="photos/portrait/46-800.jpg" />
+        </a>
+        <a href="photos/portrait/47-1500.jpg">
+            <img src="photos/portrait/47-800.jpg" />
+        </a>
+        <a href="photos/portrait/48-1500.jpg">
+            <img src="photos/portrait/48-800.jpg" />
+        </a>
+        <a href="photos/portrait/49-1500.jpg">
+            <img src="photos/portrait/49-800.jpg" />
+        </a>
+        <a href="photos/portrait/50-1500.jpg">
+            <img src="photos/portrait/50-800.jpg" />
+        </a>
+        <a href="photos/portrait/51-1500.jpg" >
+            <img src="photos/portrait/51-800.jpg" />
+        </a>
+        <a href="photos/portrait/52-1500.jpg" >
+            <img src="photos/portrait/52-800.jpg" />
+        </a>
       </div>
 
 
