--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
   
 
 
-  <script src="js/jsmain.js"></script>
+  <script src="js/js.js"></script>
  <!--  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
  <!--  <script src='https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js'>
   </script> -->
