--- a/travel.html
+++ b/travel.html
@@ -291,6 +291,33 @@ notselectedpage"  href="me.html">Contact</a></div></li>
         <a href="photos/travel/56-1500.jpg" >
             <img src="photos/travel/56-800.jpg" />
         </a>
+        <a href="photos/travel/57-1500.jpg" >
+            <img src="photos/travel/57-800.jpg" />
+        </a>
+        <a href="photos/travel/58-1500.jpg">
+            <img src="photos/travel/58-800.jpg" />
+        </a>
+        <a href="photos/travel/59-1500.jpg" >
+            <img src="photos/travel/59-800.jpg" />
+        </a>
+        <a href="photos/travel/60-1500.jpg">
+            <img src="photos/travel/60-800.jpg" />
+        </a>
+        <a href="photos/travel/61-1500.jpg">
+            <img src="photos/travel/61-800.jpg" />
+        </a>
+        <a href="photos/travel/62-1500.jpg">
+            <img src="photos/travel/62-800.jpg" />
+        </a>
+        <a href="photos/travel/63-1500.jpg">
+            <img src="photos/travel/63-800.jpg" />
+        </a>
+        <a href="photos/travel/64-1500.jpg" >
+            <img src="photos/travel/64-800.jpg" />
+        </a>
+        <a href="photos/travel/65-1500.jpg" >
+            <img src="photos/travel/65-800.jpg" />
+        </a>
       </div>
 
 
