--- a/portrait.html
+++ b/portrait.html
@@ -280,6 +280,12 @@ notselectedpage" href="me.html">Contact</a></div></li>
         <a href="photos/portrait/52-1500.jpg" >
             <img src="photos/portrait/52-800.jpg" />
         </a>
+        <a href="photos/portrait/53-1500.jpg" >
+            <img src="photos/portrait/53-800.jpg" />
+        </a>
+        <a href="photos/portrait/54-1500.jpg" >
+            <img src="photos/portrait/54-800.jpg" />
+        </a>
       </div>
 
 
