--- a/travel.html
+++ b/travel.html
@@ -43,9 +43,9 @@
 notselectedpage" ><div>Pre-wedding</div></li></a>
     <a href="portrait.html"><li class="
 notselectedpage" ><div>Portrait</div></li></a>
-    <a href="travel.html"><li ><div>Travel</div></li></a>
+    <a href="travel.html"><li ><div>Landscape</div></li></a>
     <a href="life.html"><li class="
-notselectedpage" ><div>Life</div></li></a>
+notselectedpage" ><div>Video</div></li></a>
     <a href="me.html"><li class="
 notselectedpage" ><div>Contact</div></li></a>
 
@@ -83,9 +83,9 @@ notselectedpage" ><div>Contact</div></li></a>
 notselectedpage"  href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><a class="
 notselectedpage"  href="portrait.html">Portrait</a></li>
-    <li class="horizontal"><a href="travel.html">Travel</a></li>
+    <li class="horizontal"><a href="travel.html">Landscape</a></li>
     <li class="horizontal"><a class="
-notselectedpage"  href="life.html">Life</a></li>
+notselectedpage"  href="life.html">Video</a></li>
     <li class="horizontal"><a class="
 notselectedpage"  href="me.html">Contact</a></div></li>
   </ul>
@@ -116,7 +116,7 @@ notselectedpage"  href="me.html">Contact</a></div></li>
   <div id="below-banner">
 
 <div class="col-12">
-  <h4 class="gallary-title">Travel</h4>
+  <h4 class="gallary-title">Landscape</h4>
 </div>
 
 
