--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <ul>
     <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
     <a href="portrait.html"><li><div>Portrait</div></li></a>
-    <a href="travel.html"><li><div>Travel</div></li></a>
-    <a href="life.html"><li><div>Life</div></li></a>
+    <a href="travel.html"><li><div>Landscape</div></li></a>
+    <a href="life.html"><li><div>Video</div></li></a>
     <a href="me.html"><li><div>Contact</div></li></a>
 
   </ul>
@@ -85,8 +85,8 @@
    <ul>
     <li class="horizontal mainpagenav"><a href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal mainpagenav"><a href="portrait.html">Portrait</a></li>
-    <li class="horizontal mainpagenav"><a href="travel.html">Travel</a></li>
-    <li class="horizontal mainpagenav"><a href="life.html">Life</a></li>
+    <li class="horizontal mainpagenav"><a href="travel.html">Landscape</a></li>
+    <li class="horizontal mainpagenav"><a href="life.html">Video</a></li>
     <li class="horizontal mainpagenav"><a href="me.html">Contact</a></div></li>
   </ul>
 </div>
