--- a/life.html
+++ b/life.html
@@ -39,8 +39,8 @@
   <ul>
     <a href="pre-wedding.html"><li ><div>Pre-wedding</div></li></a>
     <a href="portrait.html"><li ><div>Portrait</div></li></a>
-    <a href="travel.html"><li ><div>Travel</div></li></a>
-    <a href="life.html"><li ><div>Life</div></li></a>
+    <a href="travel.html"><li ><div>Landscape</div></li></a>
+    <a href="life.html"><li ><div>Video</div></li></a>
     <a href="me.html"><li ><div>Contact</div></li></a>
 
   </ul>
@@ -78,8 +78,8 @@ notselectedpage" href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><a class="
 notselectedpage" href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="travel.html">Travel</a></li>
-    <li class="horizontal"><a href="life.html">Life</a></li>
+notselectedpage" href="travel.html">Landscape</a></li>
+    <li class="horizontal"><a href="life.html">Video</a></li>
     <li class="horizontal"><a class="
 notselectedpage" href="me.html">Contact</a></div></li>
   </ul>
@@ -113,11 +113,11 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <div id="below-banner">
 
 <div class="col-12">
-  <h4 class="gallary-title">Life</h4>
+  <h4 class="gallary-title">Video</h4>
 </div>
 
 
-
+<!--
       <div class="swipeboxEx justified-gallery">
       <a href="photos/life/1-1500.jpg" >
             <img src="photos/life/1-800.jpg" />
@@ -168,7 +168,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
             <img src="photos/life/16-800.jpg" />
         </a>
 
-      </div>
+      </div>-->
 
 
 <div class="footer row">
