--- a/portrait.html
+++ b/portrait.html
@@ -44,9 +44,9 @@
 notselectedpage" ><div>Pre-wedding</div></li></a>
     <a href="portrait.html"><li><div>Portrait</div></li></a>
     <a href="travel.html"><li class="
-notselectedpage" ><div>Travel</div></li></a>
+notselectedpage" ><div>Landscape</div></li></a>
     <a href="life.html"><li class="
-notselectedpage" ><div>Life</div></li></a>
+notselectedpage" ><div>Video</div></li></a>
     <a href="me.html"><li class="
 notselectedpage" ><div>Contact</div></li></a>
 
@@ -84,9 +84,9 @@ notselectedpage" ><div>Contact</div></li></a>
 notselectedpage" href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><a href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="travel.html">Travel</a></li>
+notselectedpage" href="travel.html">Landscape</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="life.html">Life</a></li>
+notselectedpage" href="life.html">Video</a></li>
     <li class="horizontal"><a class="
 notselectedpage" href="me.html">Contact</a></div></li>
   </ul>
