--- a/life.html
+++ b/life.html
@@ -98,12 +98,12 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <picture>
     <source media="(orientation: landscape)"
-    srcset="img/life-banner-flat.jpg" 
+    srcset="img/video-banner-flat.jpg" 
     />
     <source media="(min-device-width: 800px)"
-    srcset="img/life-banner-flat.jpg" 
+    srcset="img/video-banner-flat.jpg" 
     />
-    <img src="img/life-banner-800.jpg" id="banner_img">
+    <img src="img/video-banner-800.jpg" id="banner_img">
     </picture>
   
         
