--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </a>
 
     <div>
-    <h6 class="gallery-text">Travel</h6>
+    <h6 class="gallery-text">Landscapre</h6>
     </div>
   </div>
 
@@ -186,7 +186,7 @@
   </a>
 
     <div>
-    <h6 class="gallery-text">Life</h6>
+    <h6 class="gallery-text">Video</h6>
     </div>
   </div>
 
