--- a/life.html
+++ b/life.html
@@ -113,7 +113,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <div id="below-banner">
 
 <div class="col-12">
-  <h4 class="gallary-title">Video</h4>
+  <h4 class="gallary-title">Videotest</h4>
 </div>
 
 
