--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <div class="col-12 gallery gallery-right">
     
   <a href="life.html">
-    <div class="gallery-image" id="life-img">
+    <div class="gallery-image" id="video-img">
       <div class="darker"></div>
     </div>
   </a>
