--- a/life.html
+++ b/life.html
@@ -116,7 +116,8 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <h4 class="gallary-title">Video</h4>
 </div>
 
-<embed src='http://player.youku.com/player.php/sid/XNjIzMjg1MTE2/v.swf' allowFullScreen='true' quality='high' width='480' height='400' align='middle' allowScriptAccess='always' type='application/x-shockwave-flash'></embed>
+<iframe height=498 width=510 src='http://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
+
 <!--
       <div class="swipeboxEx justified-gallery">
       <a href="photos/life/1-1500.jpg" >
