--- a/life.html
+++ b/life.html
@@ -116,7 +116,44 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <h4 class="gallary-title">Video</h4>
 </div>
 
-<iframe height=498 width=510 src='http://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
+<div class="row gallery-container">
+
+
+  <div class="col-12 gallery">
+
+    <a target="_blank" href="https://www.youtube.com/watch?v=NYH3gt4V8GQ">
+      <div class="gallery-image" id="hokkaido-img">
+        <div class="darker"></div>
+      </div>
+    </a>
+
+    <div>
+    <h6 class="gallery-text">Do you remember that summer?</h6>
+    </div>
+
+  </div>
+
+
+  <div class="col-12 gallery gallery-right">
+
+    <a target="_blank" href="">
+    <div class="gallery-image" id="hkust-img">
+      <div class="darker"></div>
+    </div>
+    </a>
+
+    <div>
+    <h6 class="gallery-text">For my HKUST</h6>
+    </div>
+  </div>
+
+
+ 
+
+
+
+</div>
+
 
 <!--
       <div class="swipeboxEx justified-gallery">
