--- a/life.html
+++ b/life.html
@@ -136,7 +136,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
   <div class="col-12 gallery gallery-right">
 
-    <a target="_blank" href="">
+    <a target="_blank" href="https://www.youtube.com/watch?v=dOVX0E1qxsc">
     <div class="gallery-image" id="hkust-img">
       <div class="darker"></div>
     </div>
