--- a/life.html
+++ b/life.html
@@ -154,7 +154,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 </div>
 
-
+<div id="temporary"></div>
 <!--
       <div class="swipeboxEx justified-gallery">
       <a href="photos/life/1-1500.jpg" >
